--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,7 +3,8 @@
 
   {% include head.html %}
 
-  <body class="theme-base-08" class="sidebar-overlay">
+  <body class="theme-base-0d">
+    <body class="layout-reverse">
 
     {% include sidebar.html %}
 
